<resources>
    <string name="app_name">Recepies Finder</string>
    <string name="Find">Найти!</string>
    <string name="Help">Помощь</string>
    <string name="Settings">Настройки</string>
    <string name="AddIngr">Добавить ингредиент</string>
    <string name="AddRec">Все рецепты</string>
    <string name="MainMsg">Пожалуйста, добавьте ингредиент, чтобы найти возможный рецепт или выберите рецепт из списка.</string>
    <string name="first">first</string>
    <string name="Menu">Меню</string>
    <string name="ChangeBolt">Поменять шрифт</string>
    <string name="ChangeBackGr">Поменять фон</string>
    <string name="ChangeTheme">Поменять тему</string>
    <string name="NameRecipe">Шоколадный торт Гиннесс на пиве</string>
    <string name="Gines">Этот домашний шоколадный торт - просто мечта шокоголика! Сочные, нежные, воздушные и одновременно упругие, ароматные коржи на темном пиве идеально сочетаются с нежным и бархатистым сливочным кремом. Готовить? Без сомнений!\n

        Некоторые нюансы по ингредиентам и сразу на кухню. Основой шоколадного коржа будет темное пиво Гиннесс (Guinness Draught). Этот напиток - очень насыщенный, ведь готовят его из жженого и карамельного солода, а также жареного ячменя. Можно ли заменить Гиннесс другим темным пивом? Я бы не стала.\n

        Пшеничную муку я использую высшего сорта, куриные яйца – больше средних (весом около 55–60 граммов каждое), сливочное масло - жирностью 82%. Какао-порошок покупайте несладкий, причем хорошего качества - торт ведь у нас шоколадный.\n

        Для крема я готовлю домашний Маскарпоне, но его можно заменить другими сливочными сырами. Сливки берите жирные (30–35%) - те, которые подходят для взбивания. На сайте есть проверенный рецепт как сделать жирные сливки из молока и масла (я их часто делаю для приготовления домашних десертов). Количество сахара (и пудры тоже) что в тесте, что в креме уменьшать не советую - получается гармонично.\n

        Ингредиенты:\n
            Шоколадное тесто:\n
        1) Пиво темное (400 мл)\n
        2) Сахар (350 гр)\n
        3) Мука пшеничная высшего сорта (270 гр)\n
        4) Яйца куриные (4 шт)\n
        5) Масло сливочное (220 гр)\n
        6) Какао-порошок (100 гр)\n
        7) Сода пищевая (2 чайные ложки)\n\n

        Сливочный крем:\n
        1) Сыр сливочный (400 граммов)\n
        2) Сливки (200 граммов)\n
            3) Сахарная пудра (120 граммов)\n</string>
        <string-array name="А">
            <item>"Абрикос"</item>
            <item>"Авокадо"</item>
            <item>"Айва"</item>
            <item>"Амарант"</item>
            <item>"Ананас"</item>
            <item>"Анчоусы"</item>
            <item>"Апельсин"</item>
            <item>"Арахис"</item>
            <item>"Арахисовая паста"</item>
            <item>"Арбуз"</item>
            <item>"Артишоки"</item>
            <item>"Аспартам"</item>
        </string-array>
        <string-array name="Б">
            <item>"Базилик"</item>
            <item>"Баклажан"</item>
            <item>"Бамбуковые побеги"</item>
            <item>"Бамбия"</item>
            <item>"Бананы"</item>
            <item>"Баранина"</item>
            <item>"Батат"</item>
            <item>"Бедро индейки"</item>
            <item>"Белок яйца"</item>
            <item>"Белокопытник"</item>
            <item>"Блины"</item>
            <item>"Бобы"</item>
            <item>"Ботва репы"</item>
            <item>"Ботва свекольная"</item>
            <item>"Броколли"</item>
            <item>"Брюква"</item>
            <item>"Брюссельская капуста"</item>
            <item>"Бузина"</item>
            <item>"Булгур"</item>
        </string-array>
        <string-array name="В">
            <item>"Ваниль"</item>
            <item>"Васаби"</item>
            <item>"Ветчина"</item>
            <item>"Вигна"</item>
            <item>"Вино"</item>
            <item>"Вино белое"</item>
            <item>"Вино десертное сладкое"</item>
            <item>"Вино десертное сухое"</item>
            <item>"Вино красное"</item>
            <item>"Вино розовое"</item>
            <item>"Виноград"</item>
            <item>"Виски"</item>
            <item>"Вишня"</item>
            <item>"Вода"</item>
            <item>"Водка"</item>
            <item>"Водоросли"</item>
            <item>"Воздушный рис"</item>
            <item>"Вырезка свиная"</item>
        </string-array>
        <string-array name="Г">
            <item>"Гвоздика"</item>
            <item>"Глютен"</item>
            <item>"Говядина"</item>
            <item>"Говяжий мозг"</item>
            <item>"Говяжий костец"</item>
            <item>"Говяжий рубец"</item>
            <item>"Говяжий толстый край"</item>
            <item>"Говяжий тонкий край"</item>
            <item>"Говяжий язык"</item>
            <item>"Говяжье легкое"</item>
            <item>"Говяжье сердце"</item>
            <item>"Говяжьи почки"</item>
            <item>"Говяжьи ребра"</item>
            <item>"Говяжья вырезка"</item>
            <item>"Говяжья голяшка  "</item>
            <item>"Говяжья грудинка  "</item>
            <item>"Говяжья лопатка  "</item>
            <item>"Говяжья пашина  "</item>
            <item>"Говяжья печень  "</item>
            <item>"Говяжья тушенка  "</item>
            <item>"Говяжья шея  "</item>
            <item>"Голень индейки  "</item>
            <item>"Голубика "</item>
            <item>"Горбуша "</item>
            <item>"Горбыль "</item>
            <item>"Горох "</item>
            <item>"Горчица "</item>
            <item>"Гранат "</item>
            <item>"Грейпфрут "</item>
            <item>"Грецкий орех "</item>
            <item>"Гречка "</item>
            <item>"Грибы "</item>
            <item>"Грудинка свиная "</item>
            <item>"Грудка индейки "</item>
            <item>"Групер "</item>
            <item>"Груша "</item>
            <item>"Гуава "</item>
            <item>"Гусь "</item>
        </string-array>
        <string-array name="Д">
            <item>"Дайкон "</item>
            <item>"Джамболан "</item>
            <item>"Джекфрут  "</item>
            <item>"Джин "</item>
            <item>"Дуриан  "</item>
            <item>"Дыня "</item>
        </string-array>
        <string-array name="Е">
            <item>"Ежевика "</item>
        </string-array>
        <string-array name="Ж">
            <item>"Жевательная резинка "</item>
            <item>"Желток яйца "</item>
            <item>"Желтохвост  "</item>
            <item>"Желудки индейки "</item>
            <item>"Жеруха "</item>
            <item>"Жир бараний "</item>
            <item>"Жир говяжий "</item>
            <item>"Жир гусиный "</item>
            <item>"Жир индейки "</item>
            <item>"Жир куриный "</item>
            <item>"Жир лосося "</item>
            <item>"Жир печени трески "</item>
            <item>"Жир срадин "</item>
            <item>"Жир свиной "</item>
            <item>"Жир сельди "</item>
            <item>"Жир утиный "</item>
        </string-array>
        <string-array name="З">
            <item>"Заменитель яиц "</item>
            <item>"Зеленые соевые бобы "</item>
            <item>"Зеленый горошек  "</item>
            <item>"Зерна кукурузы "</item>
            <item>"Зефир  "</item>
            <item>"Зира "</item>
            <item>"Зубатка  "</item>
        </string-array>
        <string-array name="И">
            <item>"Изюм "</item>
            <item>"Икра красная и черная "</item>
            <item>"Имбирь  "</item>
            <item>"Индейка "</item>
            <item>"Инжир  "</item>
            <item>"Ирис "</item>
        </string-array>
        <string-array name="Й">
            <item>"Йогурт "</item>
        </string-array>
        <string-array name="К">
            <item>"Кабачки молодые "</item>
            <item>"Кабачковая икра "</item>
            <item>"Кабачок  "</item>
            <item>"Какао-порошок "</item>
            <item>"Кальмар  "</item>
            <item>"Камбала "</item>
            <item>"Краб "</item>
            <item>"Каперсы "</item>
            <item>"Капуста "</item>
            <item>"Капуста квашеная "</item>
            <item>"Капуста красная "</item>
            <item>"Капуста кудрявая "</item>
            <item>"Капуста листовая "</item>
            <item>"Капуста пекинская "</item>
            <item>"Капуста савойская "</item>
            <item>"Каракатица "</item>
            <item>"Карамель "</item>
            <item>"Карбонат свиной "</item>
            <item>"Кардамон "</item>
            <item>"Каркаде "</item>
            <item>"Карп "</item>
            <item>"Картофель "</item>
            <item>"Картофель фри "</item>
            <item>"Картофельное пюре "</item>
            <item>"Каша овсяная "</item>
            <item>"Каша пшеничная "</item>
            <item>"Каштан "</item>
            <item>"Кедровый орех "</item>
            <item>"Кекс "</item>
            <item>"Кета "</item>
            <item>"Кетчуп "</item>
            <item>"Кефаль "</item>
            <item>"Кефир "</item>
            <item>"Кешью "</item>
            <item>"Кивано "</item>
            <item>"Киви "</item>
            <item>"Кижуч "</item>
            <item>"Кинза "</item>
            <item>"Киноа "</item>
            <item>"Кипрей "</item>
            <item>"Клементин "</item>
            <item>"Клубника "</item>
            <item>"Клюква "</item>
            <item>"Кожа индейки "</item>
            <item>"Козлобородник "</item>
            <item>"Козлятина "</item>
            <item>"Кокос "</item>
            <item>"Кокосовая вода "</item>
            <item>"Кокосовая стружка "</item>
            <item>"Кокосовое молоко "</item>
            <item>"Коктейльная вишня вода "</item>
            <item>"Колбаса вареная "</item>
            <item>"Колбаса копченая "</item>
            <item>"Колбаса кровяная "</item>
            <item>"Колбаса Пепперони "</item>
            <item>"Кольраби "</item>
            <item>"Конина "</item>
            <item>"Конфеты "</item>
            <item>"Корейка свиная "</item>
            <item>"Корень имбиря "</item>
            <item>"Корень лопуха "</item>
            <item>"Корень сельдерея "</item>
            <item>"Корень цикория "</item>
            <item>"Коржи бисквитные "</item>
            <item>"Корица "</item>
            <item>"Корюшка "</item>
            <item>"Кофе зерновой "</item>
            <item>"Кофе молотый "</item>
            <item>"Крабовое мясо "</item>
            <item>"Крабовые палочки "</item>
            <item>"Крахмал "</item>
            <item>"Креветки "</item>
            <item>"Крекер "</item>
            <item>"Крендельки "</item>
            <item>"Крупа амарантовая "</item>
            <item>"Крупа кукурузная "</item>
            <item>"Крупа пшеничная"</item>
            <item>"Крупа гречневая"</item>
            <item>"Крупа ячневая"</item>
            <item>"Крыжовник "</item>
            <item>"Кукуруза "</item>
            <item>"Кумкват "</item>
            <item>"Кунжут "</item>
            <item>"Курага "</item>
            <item>"Куриная голень "</item>
            <item>"Куриная грудка "</item>
            <item>"Куриная кожа "</item>
            <item>"Куриная печень "</item>
            <item>"Куриная спинка "</item>
            <item>"Куриные бедра "</item>
            <item>"Куриные желудки "</item>
            <item>"Куриные крылья "</item>
            <item>"Куриные лапки "</item>
            <item>"Куриные ножки "</item>
            <item>"Куриные сердца "</item>
            <item>"Куриный фарш "</item>
            <item>"Курица "</item>
            <item>"Куркума "</item>
            <item>"Кускус "</item>
        </string-array>
</resources>