<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--android:background="#ffcc99"-->

    <TextView
        android:id="@+id/act_main_settingText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:fontFamily="casual"
        android:gravity="center_horizontal"
        android:text="@string/Settings"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/act_main_settingText">

        <Button
            android:id="@+id/act_main_font"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffcc99"
            android:text="@string/ChangeBolt"
            android:textAllCaps="false"
            android:textSize="24sp"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/act_main_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffcc99"
            android:text="@string/ChangeBackGr"
            android:textAllCaps="false"
            android:textSize="24sp"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/act_main_topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffcc99"
            android:text="@string/ChangeTheme"
            android:textAllCaps="false"
            android:textSize="24sp"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/act_main_findRecipes"
            android:layout_width="199dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ff9966"
            android:gravity="center"
            android:text="@string/Menu"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="24sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/act_main_help"
            android:layout_width="199dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ff9966"
            android:gravity="center"
            android:text="@string/Help"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="24sp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <!--
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />-->

</androidx.constraintlayout.widget.ConstraintLayout>